should refer to the module as a project product

--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -428,7 +428,7 @@ A proposta deste trabalho é justamente utilizar a computação para ampliar a a
 
 O gerenciador de cursos \begin{otherlanguage*}{english}\textit{Modular Objected-Oriented Dynamic Learning Environment}\end{otherlanguage*} (Moodle) foi escolhido para ser a plataforma de implementação deste projeto, pois é uma plataforma open-source, ou seja, pode ser livremente modificada, e também é modular, permitindo que novas ferramentas sejam adicionadas a ela facilmente. Além é claro, de ser amplamente utilizada por instituições de ensino no mundo todo.
 
-O módulo que será desenvolvido neste trabalho permitirá que estudantes dos cursos gerenciados pelo Moodle realizem atividades com a elaboração de mapas conceituais. Adicionado a isso, o editor de mapas que será implementado também irá possuir integração com o \begin{otherlanguage*}{english}\textit{Conceptual Maps as a Service}\end{otherlanguage*}  (CMPaaS), uma plataforma que oferece diversos serviços relacionados a mapas conceituais.
+O produto deste trabalho permitirá que estudantes dos cursos gerenciados pelo Moodle realizem atividades com a elaboração de mapas conceituais. Adicionado a isso, o editor de mapas que será implementado também irá possuir integração com o \begin{otherlanguage*}{english}\textit{Conceptual Maps as a Service}\end{otherlanguage*}  (CMPaaS), uma plataforma que oferece diversos serviços relacionados a mapas conceituais.
 
 
 \section{Objetivo}
