do not list chapters, describe them by name instead

--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -454,17 +454,21 @@ O plugin desenvolvido neste trabalho será codificado em duas linguagens, JavaSc
 
 \section{Estrutura deste trabalho}
 
-Este trabalho será dividido nos capítulos descritos abaixo:
+Este trabalho será dividido em sete capítulos.
 
-\begin{itemize}
-	\item Capítulo 1: Apresenta a forma que o trabalho foi planejado e organizado. Este capítulo contém uma introdução sobre o projeto, seus objetivos e a metodologia de desenvolvimento.
-	\item Capítulo 2: Expõe o que são mapas conceituais e a sua importância no ensino. Também conceitua educação a distância e apresenta a plataforma Moodle.
-	\item Capítulo 3: Faz uma descrição sobre a  plataforma CMPaaS e a sua arquitetura.    
-	\item Capítulo 4: Descreve como foi planejado o desenvolvimento do \textit{plugin}, apresentando suas funcionalidades e como será implementado.
-	\item Capítulo 5: Detalha como o \textit{plugin} foi desenvolvido.
-	\item Capítulo 6: Apresenta o resultado final do projeto, demonstrando sua instalação, configuração e utilização.
-	\item Capítulo 7: Faz uma avaliação dos resultados obtidos no trabalho e propõe trabalhos futuros.
-\end{itemize} 
+O capítulo ``Introdução'' apresenta a forma que o trabalho foi planejado e organizado. Este capítulo contém uma introdução sobre o projeto, seus objetivos e a metodologia de desenvolvimento.
+
+O capítulo ``Mapas Conceituais e Educação'' expõe o que são mapas conceituais e a sua importância no ensino. Também conceitua educação a distância e apresenta a plataforma Moodle.
+
+O capítulo ``CMPAAS'' faz uma descrição sobre a  plataforma CMPaaS e a sua arquitetura.
+
+O capítulo ``O Projeto'' descreve como foi planejado o desenvolvimento do \textit{plugin}, apresentando suas funcionalidades e como será implementado.
+
+O capítulo ``Desenvolvimento'' detalha como o \textit{plugin} foi desenvolvido.
+
+O capítulo ``Implementação e Testes'' apresenta o resultado final do projeto, demonstrando sua instalação, configuração e utilização.
+
+O capítulo ``Considerações Finais'' faz uma avaliação dos resultados obtidos no trabalho e propõe trabalhos futuros.
 
 
 % ----------------------------------------------------------
