fix mistype on 'Agradecimentos'

--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -306,7 +306,7 @@ Aos meus pais, pela educação, apoio emocional, financeiro e tempo dedicado a m
 
 Em especial a Jalany, pelo carinho, paciência e apoio durante todo o tempo e principalmente o desenvolvimento desta monografia.
 
-Ao meu orientador Wagner, por toda a ajuda oferecida no elaboração deste travalho.
+Ao meu orientador Wagner, por toda a ajuda oferecida no elaboração deste trabalho.
  
 Ao meu amigo Josmar, pelas longas conversas, orientações e broncas.
 
