--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -548,7 +548,7 @@ Percebendo esta carência, um grupo de pesquisadores do laboratório de Informá
 %O Moodle
 %Mapas conceituais e educação a distância.
 % ---
-\section{Moodle e EaD}\label{cap-ead}
+\section{Moodle e Educação à Distância (EaD)}\label{cap-ead}
 
 Segundo \citeonline{chaves1999} EAD é um ensino que ocorre quando há uma separação física entre mestre e aprendiz, sendo utilizadas tecnologias de transmissão de voz, dados e imagens para a comunicação entre ambos. A EAD também é definida no Decreto nº 5.622 de 19 de dezembro de 2005 \cite{BRASIL2005}.
  \begin{citacao}
