--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -671,7 +671,7 @@ Os serviços do CMPaaS são oferecidos através da Internet, podendo ser acessad
 
 A \autoref{fig_cmpaas} ilustra a arquitetura do CMPaaS e como as aplicações fornecidas pelo portal utilizam os serviços da plataforma, muitas vezes consumindo mais de um dos serviços oferecidos. Além disso, é ilustrado também como um portal externo pode aproveitar os serviços disponíveis no CMPaaS, como é o caso do plugin que será apresentado posteriormente neste trabalho. Trata-se de um editor de mapas conceituais que armazena os mapas na plataforma. Assim são utilizados dois serviços fornecidos pelo CMPaaS: o de armazenagem de mapas e o de autenticação.
 
-A estrutura interna da plataforma é composta por cinco camadas: serviços externos são os serviços oferecidos pelo CMPaaS aos usuários (é o que aparece no site para o usuário); processos de negócio são as rotinas que ocorrem internamente no CMPaaS; componentes internos são as aplicações internas da plataforma; serviços de aplicações externas são serviços produzidos por ferramentas externas e são consumidos por componentes do CMPaaS; e os serviços de aplicações internas são serviços produzidos por ferramentas internas do CMPaaS e são consumidos por componentes do CMPaaS.
+A estrutura interna da plataforma é composta por cinco camadas: serviços externos, que são serviços oferecidos pelo CMPaaS aos usuários (é o que aparece no site para o usuário); processos de negócio, que são rotinas que ocorrem internamente no CMPaaS; componentes internos, que são aplicações internas da plataforma; serviços de aplicações externas, que são serviços produzidos por ferramentas externas e são consumidos por componentes do CMPaaS; e os serviços de aplicações internas, que são serviços produzidos por ferramentas internas do CMPaaS e são consumidos por componentes do CMPaaS.
 
 \subsection{Serviços oferecidos}
 
