improve editor description on 'Desenvolvimento'

--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -789,7 +789,7 @@ A plataforma Moodle e seus \textit{plugins} são desenvolvidos em PHP, por isto 
 \section{Serviço de Edição de Mapas}
 O serviço de edição de mapas foi implementado com a utilização do editor de mapas conceituais disponível no CMPaaS. Ele foi desenvolvido utilizando GoJS, que é uma biblioteca em JavaScript para criação de diagramas para navegadores \textit{Web}.
 
-Este editor foi desenvolvido de forma a salvar os mapas no formato Json, de forma a facilitar que outras aplicações utilizem os dados que ele produz. Ele foi feito desta forma devido a proposta do CMPaaS de permitir a interoperabilidade dos serviços oferecidos.
+Este editor salva os mapas no formato Json, possibilitando que outras aplicações utilizem os dados que ele produz. Foi concebido desta forma para acompanhar a proposta do CMPaaS de permitir a interoperabilidade dos serviços oferecidos.
 
 A primeira parte do trabalho foi realizar um aprimoramento deste editor, adicionando funções para a formatação dos mapas criados por ele. Inicialmente não existia a possibilidade de alterar a fonte da letra dos conceitos ou a cor de fundo dos nós. Uma barra de ferramenta foi adicionada ao editor original para que funções de formatação estivessem disponíveis.
 
