--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -791,7 +791,7 @@ O serviço de edição de mapas foi implementado com a utilização do editor de
 
 Este editor salva os mapas no formato Json, possibilitando que outras aplicações utilizem os dados que ele produz. Foi concebido desta forma para acompanhar a proposta do CMPaaS de permitir a interoperabilidade dos serviços oferecidos.
 
-A primeira parte do trabalho foi realizar um aprimoramento deste editor, adicionando funções para a formatação dos mapas criados. Inicialmente não existia a possibilidade de alterar a fonte da letra dos conceitos ou a cor de fundo dos nós. Uma barra de ferramenta foi adicionada ao editor original para que funções de formatação estivessem disponíveis.
+A primeira parte do trabalho foi realizar um aprimoramento deste editor, adicionando funções para a formatação dos mapas criados. Não existia por exemplo, a possibilidade de alterar a fonte da letra dos conceitos ou a cor de fundo dos nós. Uma barra de ferramenta foi adicionada ao editor original para que funções de formatação estivessem disponíveis.
 
 \begin{figure}[htb]
 	\caption{\label{fig_barraformacao} Editor com barra de formatação}
