wtf this paragraph was really weird

--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -882,7 +882,7 @@ Quando o estudante aciona o botão de submissão da tarefa, o Json respectivo ao
 
 Para finalizar, foi necessário criar uma forma de o editor de mapas carregar o mapa salvo pelo estudante, para caso ele tivesse interesse em editar um mapa já armazenado. A solução para isto foi realizar o caminho inverso que foi feito ao salvar o mapa criado. Ao carregar o formulário de edição de mapas o Json armazenado no banco de dados e carregado em um campo oculto e um código JavaScript se encarrega se obter o conteúdo dele e carregar no mapa.
 
-Então a primeira parte do desenvolvimento do \textit{plugin} foi concluída, o estudante conseguia criar um mapa no editor, salvar o seu conteúdo na plataforma e editar novamente caso fosse necessário. Porém ainda havia a necessidade de permitir que o avaliador tivesse acesso ao conteúdo gerado pelo aluno e, além disso, proposta do trabalho era a criação de um \textit{plugin} integrado com o CMPaaS,  portanto a segunda parte do trabalho e realizar esta integração e criar uma forma de o avaliador visualizar o mapa.
+A primeira parte do desenvolvimento do \textit{plugin} foi concluída, o estudante conseguia criar um mapa no editor, salvar o seu conteúdo na plataforma e editar novamente caso fosse necessário. Ainda havia a necessidade de permitir que o avaliador tivesse acesso ao conteúdo gerado pelo aluno. Além disso, falta a integração com o CMPaaS e utilização de seus recursos.
 
 \subsection{Integração com o CMPaaS}
 
