stop calling things as 'he'

--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -886,7 +886,7 @@ A primeira parte do desenvolvimento do \textit{plugin} foi concluída, o estudan
 
 \subsection{Integração com o CMPaaS}
 
-A integração do \textit{plugin} com o CMPaaS é feita com a utilização de dois serviços oferecidos pela plataforma. Eles são o serviço de autenticação e o de persistência de mapas.
+A integração do \textit{plugin} com o CMPaaS é feita com a utilização de dois serviços oferecidos pela plataforma: o serviço de autenticação e o de persistência de mapas.
 
 O serviço de autenticação é responsável por autorizar o acesso do usuário do Moodle ao CMPaaS. Quando o botão de sincronização é acionado é enviado uma mensagem pedindo autorização para que o usuário do Moodle tenha acesso ao serviço de mapas da plataforma. A API de autenticação do CMPaaS então responde concedendo acesso ao usuário do \textit{plugin} ao repositório de mapas.
 
