--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -949,11 +949,11 @@ A utilização do \textit{plugin} é bem simples. Ao acessar uma tarefa o estuda
 
 \section{Provas de Conceitos}
 
-Nesta seção será apresentada a utilização de todas as funcionalidades oferecidas pelo \textit{plugin}. Elas podem ser dividas em dois grupos, o de recursos para elaboração e edição dos mapas e o de persistência dos diagramas.
+Nesta seção será apresentada a utilização de todas as funcionalidades oferecidas pelo \textit{plugin}. Elas podem ser dividas em dois grupos: recursos para elaboração e edição dos mapas e persistência dos diagramas.
 
 Os recursos para edição de mapas são as funções de formatação da aparência do diagrama disponíveis na barra de ferramentas. Elas permitem alterar a cor de preenchimento dos nós e o estilo da fonte de cada conceito. A \autoref{fig_mapa} mostra um mapa no qual foi aplicado estas funções. Já a \autoref{fig_toolbar} apresenta o conteúdo dos menus \textit{dropdown} de fonte e cor de preenchimento do nó.
 
-Já a persistência do diagrama pode ser divida em duas, a gravação do mapa no Moodle e a sincronização com o CMPaaS. A primeira ocorre quando o usuário clica no botão Salvar Alterações, que foi apresentado na \autoref{fig_editor}. Já a sincronia com o CMPaaS ocorre quando o estudante utiliza o botão Sincronizar Mapa, que pode ser visto na cor verde na \autoref{fig_mapa}.
+Já a persistência do diagrama pode ser divida em duas etapas: a gravação do mapa no Moodle e a sincronização com o CMPaaS. A primeira ocorre quando o usuário clica no botão Salvar Alterações, que foi apresentado na \autoref{fig_editor}. Já a sincronia com o CMPaaS ocorre quando o estudante utiliza o botão Sincronizar Mapa, que pode ser visto na cor verde na \autoref{fig_mapa}.
 
 \begin{figure}[htb]
 	\caption{\label{fig_mapa} Mapa que utiliza os recursos de formação}
