troca de EAD por EaD

--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -550,7 +550,7 @@ Percebendo esta carência, um grupo de pesquisadores do laboratório de Informá
 % ---
 \section{Moodle e Educação à Distância (EaD)}\label{cap-ead}
 
-Segundo \citeonline{chaves1999} EAD é um ensino que ocorre quando há uma separação física entre mestre e aprendiz, sendo utilizadas tecnologias de transmissão de voz, dados e imagens para a comunicação entre ambos. A EAD também é definida no Decreto nº 5.622 de 19 de dezembro de 2005 \cite{BRASIL2005}.
+Segundo \citeonline{chaves1999} EaD é um ensino que ocorre quando há uma separação física entre mestre e aprendiz, sendo utilizadas tecnologias de transmissão de voz, dados e imagens para a comunicação entre ambos. A EaD também é definida no Decreto nº 5.622 de 19 de dezembro de 2005 \cite{BRASIL2005}.
  \begin{citacao}
  	Art. 1o  Para os fins deste Decreto, caracteriza-se a educação a distância como modalidade educacional na qual a mediação didático-pedagógica nos processos de ensino e aprendizagem ocorre com a utilização de meios e tecnologias de informação e comunicação, com estudantes e professores desenvolvendo atividades educativas em lugares ou tempos diversos \cite{BRASIL2005}.
  \end{citacao}
