--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -424,12 +424,15 @@ minha formação acadêmica e pessoal.
 
 Os mapas conceituais são ferramenta gráfica criada na década de 70, com o objetivo de ser uma representação do conhecimento. São muito fáceis de utilizar e possuem ampla aplicação na educação, podendo ser usados para apresentar o conteúdo de uma aula, de um livro ou capítulo ou ainda como método de avaliação. Por ser muito simples, podem ser elaborados com lápis e papel, porém é possível uma alcançar novas aplicações ao se utilizar de recursos computacionais.
 
-A proposta deste trabalho é justamente utilizar a computação para ampliar a aplicação dos mapas conceituais. Neste contexto foi pensado na criação de uma ferramenta que permita o uso dos mapas no ensina a distância. 
-
-O gerenciador de cursos \begin{otherlanguage*}{english}\textit{Modular Objected-Oriented Dynamic Learning Environment}\end{otherlanguage*} (Moodle) foi escolhido para ser a plataforma de implementação deste projeto, pois é uma plataforma open-source, ou seja, pode ser livremente modificada, e também é modular, permitindo que novas ferramentas sejam adicionadas a ela facilmente. Além é claro, de ser amplamente utilizada por instituições de ensino no mundo todo.
+A proposta deste trabalho é justamente utilizar a computação para ampliar a aplicação dos mapas conceituais. Neste contexto foi pensado na criação de uma ferramenta que permita o uso dos mapas no ensina a distância. Assim, este projeto visa o desenvolvimento de um componente para o gerenciador de cursos \begin{otherlanguage*}{english}\textit{Modular Objected-Oriented Dynamic Learning Environment}\end{otherlanguage*} (Moodle) que introduza os mapas conceituais nos cursos existentes nesta plataforma. 
 
 O produto deste trabalho permitirá que estudantes dos cursos gerenciados pelo Moodle realizem atividades com a elaboração de mapas conceituais. Adicionado a isso, o editor de mapas que será implementado também irá possuir integração com o \begin{otherlanguage*}{english}\textit{Conceptual Maps as a Service}\end{otherlanguage*}  (CMPaaS), uma plataforma que oferece diversos serviços relacionados a mapas conceituais.
 
+\section{Motivação}
+
+O Moodle foi escolhido para ser a plataforma de implementação deste projeto, pois é uma plataforma open-source, ou seja, pode ser livremente modificada, e também é modular, permitindo que novas ferramentas sejam adicionadas a ela facilmente. Além é claro, de ser amplamente utilizada por instituições de ensino no mundo todo.
+
+O CMPaaS é uma plataforma que oferece serviços de manipulação de mapas conceituais que necessitam de conteúdo existente previamente para funcionar, como por exemplo o serviço de inferência de mapas. Devido ao Moodle ser muito utilizado, um componente de mapas conceituais implementado nele poderia gerar uma grande quantidade de conteúdo, que poderia ser utilizado pelos serviços oferecidos pela plataforma. Dai surgiu a motivação para a integração do \textit{plugin} desenvolvido neste trabalho com o CMPaaS.
 
 \section{Objetivo}
 
@@ -683,8 +686,8 @@ Atualmente a plataforma CMPaaS oferece os seguintes serviços:
 	\item Persistência e repositório de mapas.
 	\item Controle de versão de mapas conceituais.
 	\item Importação e exportação de mapas para o CmapTools
-	\item Serviço de inferência para mapas, que permite que o usuário elabores perguntas sobre os mapas em liguagem natural.
-	\item Criação de ontologias rasas a ártir de um mapa.
+	\item Serviço de inferência para mapas, que permite que o usuário elabore perguntas sobre os mapas em liguagem natural.
+	\item Criação de ontologias rasas a partir de um mapa.
 	\item Geração automática de mapas a partir de textos.
 	\item Serviço de mesclagem de mapas conceituais.
 	\item Validação estrutural de mapas.
